Changed styling to prevent overspacing at end of list. (still tweaking)

--- a/src/components/rowItem/_rowItem.scss
+++ b/src/components/rowItem/_rowItem.scss
@@ -1,6 +1,6 @@
-.spacer-right {
-    margin-left: 22em;
-}
+// .spacer-right {
+//     margin-left: 22rem;
+// }
 
 .row-item {
     width: 18.5em;
